--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -49,6 +49,7 @@ $buttonHoverBackgroundColor: lighten($headerBackgroundColor, 10%);
 $buttonTextColor: $headerTextColor;
 $inputBackgroundColor: #FFFFFF;
 $inputTextColor: #000000;
+$windowTitlebarHeight: 30px;
 
 /* GENERAL STYLES */
 
@@ -2213,113 +2214,132 @@ path.color1 {
 }
 
 .fullscreen {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-		}
-		
-		.spinner {
-			width: 40px;
-			height: 40px;
-			position: absolute;
-			top: 45%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-		}
-		
-		#spinner-container {
-			background-color: #1D1D1D;
-			z-index: 15;
-		}
-		
-		#error-container {
-			background-color: #1D1D1D;
-			z-index: 10;
-		}
-		
-		.error-container {
-			position: absolute;
-			top: 50%;
-			transform: translateY(-50%);
-		}
-		
-		.bounce {
-			width: 100%;
-			height: 100%;
-			opacity: 0.6;
-			position: absolute;
-			top: 0;
-			left: 0;
-			-webkit-animation: sk-bounce 2.0s infinite ease-in-out;
-			animation: sk-bounce 2.0s infinite ease-in-out;
-		}
-		
-		@-webkit-keyframes sk-bounce {
-			0%,
-			100% {
-				-webkit-transform: scale(1.0)
-			}
-			50% {
-				-webkit-transform: scale(0.7)
-			}
-		}
-		
-		@keyframes sk-bounce {
-			0%,
-			100% {
-				transform: scale(0.0);
-				-webkit-transform: scale(1.0);
-			}
-			50% {
-				transform: scale(1.0);
-				-webkit-transform: scale(0.7);
-			}
-		}
-		
-		iframe {
-			border: none;
-			margin: none;
-			width: 100%;
-			height: 100%;
-			z-index: 0;
-		}
-
-		#title-bar {
- -webkit-app-region: drag;
- height: 24px; 
- padding: none;
- margin: 0px; 
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
-#title {
- position: fixed;
- top: 0px;
- left: 6px; 
+.spinner {
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	top: 45%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-#title-bar-btns  {
- -webkit-app-region: no-drag;
- position: fixed;
- top: 1px;
- right: 0px; 
+#spinner-container {
+	background-color: #1D1D1D;
+	z-index: 15;
 }
 
-
-
-#title-bar-btns button.btn-title  {
- height: 32px;
- width: 32px;
- padding: 0px !important;
- background-color: transparent;
- border: none;
- color: #F1F1F1;
- font-size: 16px;
+#error-container {
+	background-color: #1D1D1D;
+	z-index: 10;
 }
 
+.error-container {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
 
+.bounce {
+	width: 100%;
+	height: 100%;
+	opacity: 0.6;
+	position: absolute;
+	top: 0;
+	left: 0;
+	-webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+	animation: sk-bounce 2.0s infinite ease-in-out;
+}
 
-#title-bar-btns  button:hover.btn-title {
- background-color: #3F3F41;
+@-webkit-keyframes sk-bounce {
+	0%,
+	100% {
+		-webkit-transform: scale(1.0)
+	}
+	50% {
+		-webkit-transform: scale(0.7)
+	}
+}
+
+@keyframes sk-bounce {
+	0%,
+	100% {
+		transform: scale(0.0);
+		-webkit-transform: scale(1.0);
+	}
+	50% {
+		transform: scale(1.0);
+		-webkit-transform: scale(0.7);
+	}
+}
+
+iframe {
+	border: none;
+	margin: none;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
+}
+
+#window-title {
+	-webkit-app-region: drag;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	padding: none;
+	margin: 0px;
+	height: $windowTitlebarHeight;
+	background: $toolbarBackgroundColor; 
+	z-index: 99999;
+}
+
+#window-title-text {
+	text-align: center;
+	color: $labelTextColor;
+	line-height: $windowTitlebarHeight;
+	vertical-align: middle;
+}
+
+#window-title-btns  {
+	-webkit-app-region: no-drag;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+#window-title-btns button.btn-title  {
+	height: $windowTitlebarHeight;
+	width: 45px;
+	padding: 0 !important;
+	margin: 0;
+	background-color: transparent;
+	border: none;
+	border-radius: 0;
+	color: #F1F1F1;
+	font-size: 16px;
+	opacity: .5;
+}
+
+#window-title-btns  button:hover.btn-title {
+	background-color: #3F3F41;
+	opacity: 1;
+}
+
+#close-btn:hover {
+	background: #E81123 !important;
+}
+
+#window-view-container {
+	position: absolute;
+	top: $windowTitlebarHeight;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
