Added grunt watcher task for compiling SASS files. Hit Ctrl+Shift+B when starting VS code.

--- a/Artivity.Apid.Modules.Journal/app/partials/load.view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/load.view.html
@@ -12,12 +12,12 @@
 			<div style="max-width: 500px; margin: 0 auto;">
 				<h2>No database connection</h2>
 
-				<p class="description">Artivity Explorer was unable to connect to the local Artivity database. Please try to log out of your current desktop session to restart the local Artivity service.</p>
+				<p class="description">Artivity was unable to connect to the local database. Please try to log out of your current desktop session to restart the service.</p>
 
 
-				<small><label class="text-label">ERR_NO_APID_CONNECTION</label></small>
+				<p><small><label class="text-label">ERR_NO_APID_CONNECTION</label></small></p>
 
-				<p><a id="retry" class="btn" ng-click="vm.retry()">Retry</a></p>
+				<p><a id="retry" class="btn btn-default" ng-click="vm.retry()"><i class="zmdi zmdi-refresh-sync"></i> Retry</a></p>
 			</div>
 		</div>
 	</div>
