--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -111,11 +111,11 @@ input.disabled,
 
 button,
 .btn-default {
-  border: none;
-  border-radius: 3px;
+  border: none !important;
+  border-radius: 0;
   background: #303030;
   color: #a4a4a4;
-  padding: .7em;
+  padding: 7px 10px;
   margin: 0 10px 0 0;
   outline: none;
   text-shadow: none;
@@ -124,7 +124,7 @@ button,
   transition: all linear .2s; }
 
 .btn-default .zmdi {
-  padding: 0px 10px; }
+  padding: 0px 3px; }
 
 button:hover,
 .btn-default:hover {
