--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -182,11 +182,11 @@ input.disabled,
 
 button,
 .btn-default {
-	border: none;
-	border-radius: 3px;
+	border: none !important;
+	border-radius: 0;
 	background: $buttonBackgroundColor;
 	color: $labelTextColor;
-	padding: .7em;
+	padding: 7px 10px;
 	margin: 0 10px 0 0;
 	outline: none;
 	text-shadow: none;
@@ -196,7 +196,7 @@ button,
 }
 
 .btn-default .zmdi {
-	padding: 0px 10px;
+	padding: 0px 3px;
 }
 
 button:hover,
