--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -1,4 +1,3 @@
-/* NOTE: If Brackets refuses to compile SASS files, check for syntax errors! */
 /*
 https://coolors.co/17bebb-ffc914-fb5f1a-2e282a-76b041
 https://coolors.co/17bebb-ffc914-fb5f1a-D62828-76b041
@@ -216,7 +215,7 @@ button:focus,
   color: #a4a4a4;
   text-transform: uppercase;
   transition: all .1s linear;
-  padding: .75em 1em; }
+  padding: .55em 1em; }
 
 .nav-tabs.nav-tabs-top li a {
   border-bottom: 0;
@@ -1193,7 +1192,8 @@ button[disabled]:hover {
 .bootstrap-switch {
   background: #303030;
   outline: none;
-  border: none; }
+  border: none;
+  border-radius: 0 !important; }
 
 .bootstrap-switch-label {
   background: #303030 !important; }
@@ -1204,11 +1204,13 @@ button[disabled]:hover {
   box-shadow: none !important; }
 
 .bootstrap-switch-handle-on {
-  background: green !important; }
+  background: green !important;
+  border-radius: 0 !important; }
 
 .bootstrap-switch-handle-off {
   background: #666 !important;
-  color: white !important; }
+  color: white !important;
+  border-radius: 0 !important; }
 
 .nav-pills > li > a {
   cursor: pointer;
@@ -1904,3 +1906,5 @@ iframe {
   left: 0;
   right: 0;
   bottom: 0; }
+
+/*# sourceMappingURL=style.css.map */
