--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -1,6 +1,3 @@
-/* NOTE: If Brackets refuses to compile SASS files, check for syntax errors! */
-
-
 /*
 https://coolors.co/17bebb-ffc914-fb5f1a-2e282a-76b041
 https://coolors.co/17bebb-ffc914-fb5f1a-D62828-76b041
@@ -305,7 +302,7 @@ button:focus,
 	color: $labelTextColor;
 	text-transform: uppercase;
 	transition: all .1s linear;
-	padding: .75em 1em;
+	padding: .55em 1em;
 }
 
 .nav-tabs.nav-tabs-top li a {
@@ -1477,6 +1474,7 @@ button[disabled]:hover {
 	background: $toolbarBackgroundColor;
 	outline: none;
 	border: none;
+	border-radius: 0 !important;
 }
 
 .bootstrap-switch-label {
@@ -1491,11 +1489,13 @@ button[disabled]:hover {
 
 .bootstrap-switch-handle-on {
 	background: green !important;
+	border-radius: 0 !important;
 }
 
 .bootstrap-switch-handle-off {
 	background: #666 !important;
 	color: white !important;
+	border-radius: 0 !important;
 }
 
 .nav-pills > li > a {
