--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -8,7 +8,7 @@
 				<h5 class="title" translate="SETTINGS.TITLE"></h5>
 			</div>
 			<div class="col">
-				<a class="btn btn-header" onclick="history.back()"><i class="zmdi zmdi-close"></i></a>
+				<a class="btn btn-header" onclick="history.back()"><i class="zmdi zmdi-close-circle"></i></a>
 			</div>
 		</div>
 	</div>
