Refactored controllers, views and directires in Journal.

--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -183,10 +183,15 @@ button:focus,
 
 .btn-header {
   margin: 0 !important;
-  width: 45px;
+  min-width: 45px;
   height: 45px;
+  line-height: 45px;
+  vertical-align: middle;
   background: none;
   color: #a4a4a4; }
+
+.btn-header.btn-text {
+  padding: 0 10px !important; }
 
 .circular,
 .btn-circular {
@@ -215,7 +220,7 @@ button:focus,
   color: #a4a4a4;
   text-transform: uppercase;
   transition: all .1s linear;
-  padding: .55em 1em; }
+  padding: .6em 1em; }
 
 .nav-tabs.nav-tabs-top li a {
   border-bottom: 0;
