--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/add-account-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/add-account-dialog.html
@@ -39,21 +39,18 @@
 				<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="parameter.username" required>
 				<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="parameter.password" ui-keypress="{13:'connectAccount(selectedClient)'}" required>
 			</div>
-
-
 		</form>
 
 		<div class="modal-footer-buttons text-center">
 			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
-			<button class="btn btn-icn btn-circular btn-success pull-right" type="submit" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < clientState && clientState < 3)"><i class="zmdi zmdi-check"></i></button>
+			<button class="btn btn-icn btn-circular btn-success pull-right" type="submit" ng-click="connectAccount(selectedClient)" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < clientState && clientState < 3)"><i class="zmdi zmdi-check"></i></button>
 		</div>
 	</div>
 
 	<div ng-switch-when="http://orcid.org">
 		<p class="description">Please log into your ORCiD account and allow Artivity to be connected:</p>
 
-		<iframe ng-src="{{clientUrl}}" style="min-height: 400px; width: 100%;">
-		</iframe>
+		<iframe ng-src="{{clientUrl}}" style="min-height: 400px; width: 100%;"></iframe>
 
 		<div class="modal-footer-buttons text-center">
 			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
