--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-user.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-user.html
@@ -8,7 +8,7 @@
             <div class="clearfix"></div>
 
             <div class="form-group">
-                <input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" ng-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
+                <input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" art-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
 
                 <button id="photo-btn" class="btn img-avatar img-avatar-lg circular">
                     <img id="photo-img" ng-src="{{userPhotoUrl}}" width="100" height="100">
