--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -23,13 +23,13 @@
 		<div class="ui-pane ui-pane-center">
 			<div class="tab-content nav-stacked" style="max-width: 800px;">
 				<div role="tabpanel" class="tab-pane padded-lg fade active in" id="user-panel">
-					<div art-user-settings></div>
+					<div art-settings-user></div>
 				</div>
 				<div role="tabpanel" class="tab-pane padded-lg fade" id="accounts-panel">
-					<div art-accounts-settings></div>
+					<div art-settings-accounts></div>
 				</div>
 				<div role="tabpanel" class="tab-pane padded-lg fade" id="applications-panel">
-					<div art-apps-settings></div>
+					<div art-settings-apps></div>
 				</div>
 			</div>
 		</div>
