--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-accounts.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-accounts.html
@@ -1,4 +1,4 @@
-<form name="form" ng-controller="AccountsSettingsDirectiveFormController">
+<form name="form">
     <div class="form-header">
         <button class="btn btn-default btn-circular pull-right" style="position: relative; right -10px; top: -10px;" ng-click="addAccount()"><i class="zmdi zmdi-plus zmdi-lg"></i></button>
 
