Setup and main app ready for testing.

--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-accounts.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-accounts.html
@@ -1,6 +1,6 @@
 <form name="form">
     <div class="form-header">
-        <button class="btn btn-default btn-circular pull-right" style="position: relative; right -10px; top: -10px;" ng-click="addAccount()"><i class="zmdi zmdi-plus zmdi-lg"></i></button>
+        <button class="btn btn-chromeless pull-right" style="position: relative; right -10px; top: -10px;" ng-click="addAccount()"><i class="zmdi zmdi-plus zmdi-lg"></i> <span class="btn-label">Add account</span></button>
 
         <p class="description">{{ 'SETTINGS.ACCOUNTS.DESCRIPTION' | translate }}</p>
     </div>
