--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-user.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-settings-user.html
@@ -1,65 +1,61 @@
 <form name="form">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-header">
-                <p class="description">{{ 'SETTINGS.PROFILE.DESCRIPTION' | translate }}</p>
-            </div>
+    <div class="form-header">
+        <p class="description">{{ 'SETTINGS.PROFILE.DESCRIPTION' | translate }}</p>
+    </div>
 
-            <div class="clearfix"></div>
+    <div class="clearfix"></div>
 
-            <div class="form-group">
-                <input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" art-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
+    <div class="form-group">
+        <input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" art-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
 
-                <button id="photo-btn" class="btn img-avatar img-avatar-lg circular">
-                    <img id="photo-img" ng-src="{{userPhotoUrl}}" width="100" height="100">
-                </button>
+        <button id="photo-btn" class="btn img-avatar img-avatar-lg circular">
+            <img id="photo-img" ng-src="{{userPhotoUrl}}" width="100" height="100">
+        </button>
 
-                <label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> {{ 'SETTINGS.PROFILE.LABEL_PICTURE' | translate }}</label>
+        <label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> {{ 'SETTINGS.PROFILE.LABEL_PICTURE' | translate }}</label>
 
-                <script type="text/javascript">
-                    $('#photo-btn').on('click', function () {
-                        $('#photo').click();
-                    });
-                </script>
-            </div>
+        <script type="text/javascript">
+            $('#photo-btn').on('click', function () {
+                $('#photo').click();
+            });
+        </script>
+    </div>
 
-            <div style="max-width: 500px;">
-                <div class="form-group">
-                    <label for="name">{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}</label>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}" size="30" ng-model="user.Name">
-                </div>
+    <div style="max-width: 500px;">
+        <div class="form-group">
+            <label for="name">{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}</label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="{{ 'SETTINGS.PROFILE.LABEL_NAME' | translate }}" size="30" ng-model="user.Name">
+        </div>
 
-                <div class="form-group">
-                    <label for="organization">{{'SETTINGS.PROFILE.LABEL_ORGANIZATION' | translate}}</label>
-                    <input type="text" class="form-control" id="organization" name="organization" placeholder="{{'SETTINGS.PROFILE.LABEL_ORGANIZATION' | translate}}" length="25" ng-model="user.Organization">
-                </div>
+        <div class="form-group">
+            <label for="organization">{{'SETTINGS.PROFILE.LABEL_ORGANIZATION' | translate}}</label>
+            <input type="text" class="form-control" id="organization" name="organization" placeholder="{{'SETTINGS.PROFILE.LABEL_ORGANIZATION' | translate}}" length="25" ng-model="user.Organization">
+        </div>
 
-                <div class="form-group">
-                    <label for="email">{{'SETTINGS.PROFILE.LABEL_EMAIL' | translate}}</label>
-                    <input type="text" class="form-control" id="email" name="email" placeholder="you@example.org" length="25" ng-model="user.EmailAddress" ng-minlength="5" required>
-                </div>
+        <div class="form-group">
+            <label for="email">{{'SETTINGS.PROFILE.LABEL_EMAIL' | translate}}</label>
+            <input type="text" class="form-control" id="email" name="email" placeholder="you@example.org" length="25" ng-model="user.EmailAddress" ng-minlength="5" required>
+        </div>
 
-                <div class="form-group" style="margin-top: 3em;" class="label ng-hide" ng-show="{{backupEnabled}}">
-                    <div ng-switch="backupStatus">
-                        <div ng-switch-default>
-                            <div ng-switch="backupStatus.Error">
-                                <div ng-switch-when="null">
-                                    <div ng-if="backupStatus.PercentComplete < 100">
-                                        <i class="loader loader-xs"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_CREATING' | translate}}: <span ng-bind="backupStatus.PercentComplete"></span>%
-                                    </div>
-                                    <div ng-if="backupStatus.PercentComplete >= 100">
-                                        <i class="zmdi zmdi-check-circle"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_SUCCESS' | translate}}
-                                    </div>
-                                </div>
-                                <div ng-switch-default>
-                                    <i class="zmdi zmdi-alert-circle"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_ERROR' | translate}}: <span ng-bind="backupStatus.Error"></span>
-                                </div>
+        <div class="form-group" style="margin-top: 3em;" class="label ng-hide" ng-show="{{backupEnabled}}">
+            <div ng-switch="backupStatus">
+                <div ng-switch-default>
+                    <div ng-switch="backupStatus.Error">
+                        <div ng-switch-when="null">
+                            <div ng-if="backupStatus.PercentComplete < 100">
+                                <i class="loader loader-xs"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_CREATING' | translate}}: <span ng-bind="backupStatus.PercentComplete"></span>%
+                            </div>
+                            <div ng-if="backupStatus.PercentComplete >= 100">
+                                <i class="zmdi zmdi-check-circle"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_SUCCESS' | translate}}
                             </div>
                         </div>
-                        <div ng-switch-when="null">
-                            <a class="btn btn-chromeless" ng-click="createBackup()"><i class="zmdi zmdi-account-box-o"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_CREATE' | translate}}</a>
+                        <div ng-switch-default>
+                            <i class="zmdi zmdi-alert-circle"></i> {{'SETTINGS.PROFILE.LABEL_BACKUP_ERROR' | translate}}: <span ng-bind="backupStatus.Error"></span>
                         </div>
                     </div>
+                </div>
+                <div ng-switch-when="null">
+                    <a class="btn btn-chromeless" ng-click="createBackup()"><i class="zmdi zmdi-account-box-o"></i> <span class="btn-label">{{'SETTINGS.PROFILE.LABEL_BACKUP_CREATE' | translate}}</span></a>
                 </div>
             </div>
         </div>
