--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -24,7 +24,7 @@ $textFont: 'Roboto',
 'Arial',
 sans-serif;
 $textColor: #F0F0F0;
-$labelTextColor: darken($textColor, 30%);
+$labelTextColor: darken($textColor, 20%);
 $labelBackgroundColor: transparent;
 $itemTextColor: $textColor;
 $itemBackgroundColor: rgba($textColor, .025);
@@ -33,7 +33,7 @@ $highlightBackgroundColor: rgba($textColor, .05);
 $selectionTextColor: $textColor;
 $selectionBorderColor: transparent;
 $selectionBackgroundColor: rgba($textColor, .1);
-$windowBackgroundColor: #1D1D1D;
+$windowBackgroundColor: #202020;
 $headerBackgroundColor: #303030;
 $headerTextColor: $textColor;
 $headerHeight: 45px;
@@ -42,11 +42,12 @@ $toolbarTextColor: $headerTextColor;
 $overlayTextColor: $textColor;
 $overlayBackgroundColor: rgba($windowBackgroundColor, .95);
 $buttonBackgroundColor: $headerBackgroundColor;
-$buttonHoverBackgroundColor: lighten($headerBackgroundColor, 10%);
+$buttonHoverBackgroundColor: rgba($headerBackgroundColor, .4);
 $buttonTextColor: $headerTextColor;
 $inputBackgroundColor: #FFFFFF;
 $inputTextColor: #000000;
 $windowTitlebarHeight: 30px;
+$scrollbarSize: 16px;
 
 /* GENERAL STYLES */
 
@@ -58,6 +59,7 @@ body {
 
 h1 {
 	font-size: 2em;
+	margin-bottom: .5em;
 }
 
 h2 {
@@ -72,14 +74,6 @@ h3 {
 h3,
 h4 {
 	color: $labelTextColor;
-}
-
-.no-margin {
-	margin: 0;
-}
-
-.no-margin-top {
-	margin-top: 0;
 }
 
 body {
@@ -106,6 +100,14 @@ a:hover {
 
 iframe {
 	border: none;
+}
+
+.no-margin {
+	margin: 0;
+}
+
+.no-margin-top {
+	margin-top: 0;
 }
 
 .collapsed {
@@ -181,7 +183,6 @@ input.disabled,
 	cursor: default;
 }
 
-button,
 .btn-default {
 	border: none !important;
 	border-radius: 0;
@@ -194,13 +195,22 @@ button,
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	transition: all linear .2s;
+	min-width: 100px;
 }
 
 .btn-default .zmdi {
 	padding: 0px 3px;
 }
 
+.btn {
+	margin: 0;
+	border-radius: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
 button:hover,
+.btn:hover,
 .btn-default:hover {
 	background: $buttonHoverBackgroundColor;
 	color: $buttonTextColor !important;
@@ -222,18 +232,17 @@ button:focus,
 }
 
 .btn-success {
-	background: #FB5F1A;
+	color: $accentTextColor;
+	background: $accentColor;
 	border: none;
-	border-radius: 2px;
 	transition: all linear .2s;
 }
 
 .btn-success:hover {
-	background: lighten(#FB5F1A, 5%);
+	background: lighten($accentColor, 5%);
 }
 
 .btn-chromeless {
-	padding: 0;
 	background: transparent;
 	color: $labelTextColor !important;
 	transition: color linear .2s;
@@ -241,10 +250,7 @@ button:focus,
 
 .btn-chromeless:hover {
 	color: $buttonTextColor !important;
-}
-
-.btn .zmdi {
-	margin-right: 5px;
+	background: transparent;
 }
 
 .btn-sm {
@@ -292,16 +298,23 @@ button:focus,
 	height: 45px;
 }
 
-.nav-pills {
-	border: 1px solid $headerBackgroundColor;
-	border-radius: 2px;
-	margin: 15px;
+.btn-paging {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 32px;
 }
 
-.nav-pills li a {
-	margin: 0;
-	padding: 5px;
-	min-width: 150px;
+.btn-paging.btn-next {
+	right: 0;
+}
+
+.btn-paging.btn-prev {
+	left: 0;
+}
+
+.btn .btn-label {
+	margin-left: 5px;
 }
 
 .nav-tabs {
@@ -352,7 +365,7 @@ button:focus,
 
 .nav-tabs.nav-stacked li a {
 	border: none;
-	border-left: 2px solid transparent;
+	border-left: 1px solid transparent;
 	margin: 0;
 	text-transform: none;
 }
@@ -360,13 +373,9 @@ button:focus,
 .nav-tabs.nav-stacked li.active a,
 .nav-tabs.nav-stacked li.active a:hover {
 	border: none;
-	border-left: 2px solid $accentColor !important;
+	border-left: 1px solid $accentColor !important;
 	color: $highlightTextColor;
 	background: $accentColor;
-}
-
-.tab-content {
-	padding: 30px;
 }
 
 .center-parent {
@@ -504,58 +513,34 @@ h4 {
 	font-size: 1.1em;
 }
 
+.subline {
+	margin: .5em 0 2em 0;
+}
 
 /* HEADER */
 
-#header,
-#footer {
-	display: table;
-	background: $headerBackgroundColor;
-	color: $headerTextColor;
-	width: 100%;
-	height: 45px;
+.toolbar {
+	background: $toolbarBackgroundColor;
+	color: $toolbarTextColor;
+}
+
+.header {
+	background: $toolbarBackgroundColor;
+	color: lighten($labelTextColor, 10%) !important;
+	padding: 3em 0;
+}
+
+.header .header-border-container {
+	padding-bottom: 0;
+	border-bottom: 2px solid $accentColor !important;
+}
+
+.header .toolbar {
 	padding: 0;
 	margin: 0;
-	border-spacing: 0;
-	table-layout: fixed;
-	z-index: 1000;
 }
 
-#header {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	z-index: 2000;
-	border-top: 1px solid darken($headerBackgroundColor, 2%);
-	border-bottom: 1px solid darken($headerBackgroundColor, 2%);
-}
-
-.table .row,
-#header .row,
-#footer .row {
-	display: table-row;
-}
-
-.table .col,
-#header .col,
-#footer .col {
-	position: relative;
-	display: table-cell;
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-	width: 45px;
-	text-align: center;
-}
-
-.table .col.expand,
-#header .col.expand,
-#footer .col.expand {
-	width: 100% !important;
-}
-
-#header .title {
+.header .toolbar .title {
 	font-size: 17px;
 	font-weight: 400;
 	text-align: left;
@@ -565,8 +550,8 @@ h4 {
 	top: 2px;
 }
 
-#header a.btn,
-#footer a.btn {
+.header .toolbar a.btn,
+.footer .toolbar a.btn {
 	border-radius: 0 !important;
 	padding: 0;
 	margin: 0;
@@ -575,82 +560,38 @@ h4 {
 	color: rgba($textColor, .6);
 }
 
-#header a.btn i,
-#footer a.btn i {
+.header .toolbar a.btn i,
+.footer .toolbar a.btn i {
 	display: block;
 	width: 45px;
 	height: 45px;
 	line-height: 45px;
 	font-size: $iconFontSize;
-	vertical-align: middle;
 	text-align: center;
 }
 
-#footer a.btn i {
+.footer .toolbar a.btn i {
 	font-size: 20px !important;
 }
 
-#header a.btn:hover,
-#footer a.btn:hover {
+.header .toolbar a.btn:hover,
+.footer .toolbar a.btn:hover {
 	background: rgba(255, 255, 255, .1);
 	color: rgba($textColor, 1);
 }
 
-#header .icn,
-#footer .icn {
+.header .toolbar .icn,
+.footer .toolbar .icn {
 	width: 32px;
 	height: 32px;
 }
 
-#header .icn-circle,
-#footer .icn-circle {
+.header .toolbar .icn-circle,
+.footer .toolbar .icn-circle {
 	border-radius: 50%;
 }
 
-.jumbo-header #header {
-	height: 65px;
-}
-
-.jumbo-header #header .col {
-	width: 60px;
-}
-
-.jumbo-header #header .title {
-	line-height: 60px;
-}
-
-.jumbo-header #header .icn {
-	width: 45px;
-	height: 45px;
-}
-
-.jumbo-header #body {
-	top: 65px;
-}
-
-
 /* BODY */
-
-#body-wrapper {
-	display: block;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 47px;
-	z-index: 0;
-}
-
-#body-wrapper.bottom-toolbar {
-	bottom: 45px;
-}
-
-#body {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-}
 
 #canvas {
 	padding: 0;
@@ -779,14 +720,6 @@ h4 {
 	padding: 0;
 }
 
-.ui-pane .tab-pane.padded {
-	padding: 15px;
-}
-
-.ui-pane .tab-pane.padded-lg {
-	padding: 2em;
-}
-
 .ui-pane .pane-content {
 	position: absolute;
 	top: 0;
@@ -795,19 +728,108 @@ h4 {
 	bottom: 0;
 }
 
-.ui-pane .pane-content.padded {
-	padding: 15px;
-}
-
 .scroll-vertical {
 	overflow-y: scroll;
 }
 
+.layout-root {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+.layout-container {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.table-layout {
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+	height: 100%;
+}
+
+.table-layout .row {
+	display: table-row;
+	position: relative;
+	margin: 0;
+	padding: 0;
+}
+
+.table-layout .row.expand {
+	height: 100%;
+	overflow: hidden;
+}
+
+.table-layout .col {
+	display: table-cell;
+	position: relative;
+	margin: 0;
+	padding: 0;
+}
+
+.table-layout .col.expand {
+	width: 100%;
+}
+
+.scroll-container {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+};
+
+.scroll-container.layout-fix {
+	padding-left: $scrollbarSize;
+}
+
+.scroll-container.scroll-x {
+	overflow-x: scroll !important;
+}
+
+.scroll-container.scroll-y {
+	overflow-y: scroll !important;
+}
+
+.padding-xs.padding-x {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.padding-md.padding-x {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.padding-xl.padding-x {
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+.padding-xs.padding-y {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.padding-md.padding-y {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+.padding-xl.padding-y {
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
 
 /* FOOTER */
 
-.statusbar,
-#footer {
+.statusbar {
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -819,7 +841,6 @@ h4 {
 	background: $windowBackgroundColor;
 }
 
-
 /* TOOLBARS */
 
 .toolbar {
@@ -829,7 +850,7 @@ h4 {
 	transition-property: all;
 	transition-duration: 1s;
 	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-	padding: 0 14px;
+	padding: 0;
 }
 
 .toolbar.hidden {
@@ -857,7 +878,6 @@ h4 {
 .btn-toggle-play {
 	font-size: 30px !important;
 }
-
 
 /* ACTIVITIES CHART */
 
@@ -1285,7 +1305,6 @@ select.form-control:focus {
 }
 
 .modal-dialog {
-	margin-top: 45px;
 	width: 700px;
 }
 
@@ -1339,7 +1358,6 @@ select.form-control:focus {
 .modal-content {
 	-webkit-box-shadow: none;
 	box-shadow: none;
-	border: none;
 	border-radius: 0 0 10px 10px;
 	background: #222;
 	min-width: 700px;
@@ -1386,7 +1404,7 @@ button[disabled]:hover {
 }
 
 .progress-bar {
-	background: #EB7414 !important;
+	background: $accentColor !important;
 }
 
 
@@ -1452,7 +1470,6 @@ button[disabled]:hover {
 	}
 }
 
-
 /* MISC */
 
 .under-construction {
@@ -1465,9 +1482,9 @@ button[disabled]:hover {
 }
 
 ::-webkit-scrollbar {
-	width: 16px;
+	width: $scrollbarSize;
 	/* for vertical scrollbars */
-	height: 16px;
+	height: $scrollbarSize;
 	/* for horizontal scrollbars */
 }
 
@@ -1493,6 +1510,7 @@ button[disabled]:hover {
 
 .bootstrap-switch-label {
 	background: $toolbarBackgroundColor !important;
+	padding: 3px 10px !important;
 }
 
 .bootstrap-switch-focused {
@@ -1507,9 +1525,42 @@ button[disabled]:hover {
 }
 
 .bootstrap-switch-handle-off {
-	background: #666 !important;
-	color: white !important;
+	background: $labelTextColor !important;
+	color: $windowBackgroundColor !important;
 	border-radius: 0 !important;
+}
+
+.nav-pills {
+	border: none;
+	border-radius: 0;
+	margin: 0;
+}
+
+.nav-pills li a {
+	margin: 0;
+	padding: 5px;
+	min-width: 130px;
+	text-align: center;
+}
+
+.nav-pills li a .icn-container-lg {
+	margin-left: -1em;
+}
+
+.nav-pills.border {
+	border: 1px solid $headerBackgroundColor;
+}
+
+.nav-pills.border-top {
+	border-top: 1px solid $headerBackgroundColor;
+}
+
+.nav-pills.border-bottom {
+	border-bottom: 1px solid $headerBackgroundColor;
+}
+
+.nav-pills > li + li {
+    margin-left: 1px;
 }
 
 .nav-pills > li > a {
@@ -1527,9 +1578,15 @@ button[disabled]:hover {
 .nav-pills > li > a:hover,
 .nav-pills > li.active > a:hover {
 	cursor: pointer;
-	background: $accentColor;
 	color: $accentTextColor;
+	background: $accentColor;
 	border-radius: 0;
+	transition: background linear .2s;
+}
+
+.nav-pills > li > a:hover {
+	color: $accentColor;
+	background: transparent;
 }
 
 .hint {
@@ -1546,7 +1603,7 @@ button[disabled]:hover {
 
 .overlay {
 	position: absolute;
-	top: $headerHeight;
+	top: 0;
 	right: 0;
 	left: 0;
 	bottom: 0;
@@ -1588,33 +1645,6 @@ button[disabled]:hover {
 	left: 50%;
 	transform: translate(-50%, -100%);
 }
-
-.ctl-history {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 59px;
-	overflow-y: scroll;
-}
-
-.ctl-history:focus {
-	outline: none;
-}
-
-/*
-.lst-activities .connection {
-	position: absolute;
-	top: 0;
-	left: 27px;
-	bottom: 0;
-	width: 2px;
-	background: $headerBackgroundColor;
-	background: #E96F02;
-	z-index: -10;
-	display: none;
-}
-*/
 
 .lst-activities label {
 	margin: 0;
@@ -1801,14 +1831,8 @@ button[disabled]:hover {
 	border-left-color: $accentColor;
 }
 
-.ctl-comment {
-	display: block;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	border-top: 1px solid $headerBackgroundColor;
-	padding: 10px;
+.ctl-history:focus {
+	outline: none;
 }
 
 .ctl-comment textarea,
@@ -1831,7 +1855,6 @@ button[disabled]:hover {
 	margin: 5px;
 }
 
-
 /* STATS */
 
 .chart-donut {
@@ -1847,7 +1870,6 @@ path.color0 {
 path.color1 {
 	fill: #35526b;
 }
-
 
 /* YASGUI */
 
@@ -1923,7 +1945,7 @@ path.color1 {
 	padding: 10px 8px 10px 12px;
 	width: 45px;
 	height: 45px;
-	background: #F94C00;
+	background: $accentColor;
 	color: white;
 }
 
@@ -2222,7 +2244,7 @@ path.color1 {
 		display: none;
 	}
 	
-	#footer {
+	.footer .toolbar {
 		bottom: 201px;
 	}
 }
@@ -2356,4 +2378,35 @@ iframe {
 	left: 0;
 	right: 0;
 	bottom: 0;
+}
+
+#window-view-container > .ng-scope {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+/* ANIMATIONS */
+
+.animate-show.animate-height {
+    overflow: hidden;
+}
+.animate-show.animate-height.ng-hide-add {
+	max-height: 99999px;
+    transition: max-height 0.25s ease-in;
+}
+
+.animate-show.animate-height.ng-hide-remove {
+	max-height: 0;
+}
+
+.animate-spin-hover:hover .zmdi {
+	animation: keyframes-spin 10s linear infinite;
+}
+
+@keyframes keyframes-spin {
+	100% {
+		-webkit-transform: rotate(360deg);
+		transform:rotate(360deg);
+	}
 }
