--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -222,7 +222,7 @@
 		</div>
 	</div>
 	<div class="row footer" style="height: 50px;">
-		<div class="toolbar">
+		<div class="toolbar" style="height: 100%;">
 			<div class="col">
 				<a class="btn btn-skip-prev" ng-click="t.skipPrev()"><i class="zmdi zmdi-skip-previous"></i></a>
 			</div>
